--- a/index.html
+++ b/index.html
@@ -1,51 +1,82 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Frank & Fran's Fishing Report</title>
-    <style>
-        body { font-family: Arial; margin: 0; background: #eef4fa; color: #001d4a; text-align: center; }
-        h1 { padding: 10px; font-size: 30px; }
-        #content { display: flex; justify-content: space-around; align-items: left; height: 90vh; }
-        #text { flex: 1; font-size: 1.75vw; padding: 20px; overflow-y: auto; text-align: left; }
-        #photos { flex: 1; }
-        #photos img { max-width: 100%; max-height: 80vh; display: none; }
-        #photos img.active { display: block; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Frank & Fran's Fishing Reports</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f8f8;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
+      color: #003366;
+    }
+    .post-content {
+      font-size: 1.2em;
+      max-width: 1200px;
+      margin: 0 auto 40px auto;
+      text-align: left;
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    #slideshow img {
+      width: 500px;
+      margin: 20px 0;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-    <h1 id="header">Loading Header...</h1>
-    <div id="content">
-        <div id="text">Loading...</div>
-        <div id="photos"></div>
-    </div>
-<script>
-async function fetchPosts() {
-    try {
-        const res = await fetch('/fb-posts');
-        const posts = await res.json();
-        console.log("Fetched posts:", posts);
-        if (!posts.length) {
-            document.getElementById('text').innerText = 'No posts found.';
-            document.getElementById('header').innerText = 'No Header';
-            return;
+  <h1 id="header">Frank & Fran's Fishing Report</h1>
+  <div id="posts"></div>
+  <div id="slideshow"></div>
+  <script>
+    fetch('/fb-posts')
+      .then(res => {
+        if (!res.ok) throw new Error("Network response was not ok");
+        return res.json();
+      })
+      .then(data => {
+        if (data.length > 0) {
+          const firstPost = data[0];
+          const lines = firstPost.text.split('\n');
+          const titleLine = lines.shift();
+          document.getElementById('header').innerText = titleLine;
+
+          const postsDiv = document.getElementById('posts');
+          const block = document.createElement('div');
+          block.className = "post-content";
+          block.innerHTML = `<p>${lines.join('<br>')}</p>`;
+          postsDiv.appendChild(block);
+
+          // Set up the slideshow
+          let slideIndex = 0;
+          const slideshow = document.getElementById('slideshow');
+          const images = firstPost.images;
+
+          function showSlide() {
+            slideshow.innerHTML = `<img src="${images[slideIndex]}" alt="Slide ${slideIndex+1}">`;
+            slideIndex = (slideIndex + 1) % images.length;
+          }
+
+          if (images.length > 0) {
+            showSlide(); // show first image immediately
+            setInterval(showSlide, 8000); // change every 8 seconds
+          }
         }
-        document.getElementById('header').innerText = posts[0].text.split("\n")[0] || 'Fishing Report';
-        document.getElementById('text').innerText = posts[0].text;
-
-        posts[0].images.forEach(url => {
-            const img = document.createElement('img');
-            img.src = url;
-            img.className = "active";
-            document.getElementById('photos').appendChild(img);
-        });
-    } catch (err) {
-        console.error("Failed fetching posts", err);
-        document.getElementById('text').innerText = 'Error loading posts.';
-    }
-}
-
-fetchPosts();
-</script>
+      })
+      .catch(err => {
+        console.error('Error loading posts:', err);
+        document.getElementById('posts').innerHTML = `<p style="color:red;">Failed to load posts. Please refresh.</p>`;
+      });
+  </script>
 </body>
 </html>
