--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="posts"></div>
   <div id="slideshow"></div>
   <script>
-    fetch('https://your.render.com/fb-posts')
+    fetch('https://fb-widget-4.onrender.com/fb-posts')
       .then(res => {
         if (!res.ok) throw new Error("Network response was not ok");
         return res.json();
